--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="section">
+            <div class="section services-content">
                 <div class="row">
                     <div class="col s10 m10 l8 offset-s1 offset-m1 offset-l2 enclosed">
                         <div class="row">
@@ -68,19 +68,19 @@
         </div>
         <div id="footer">
             <div class="left">
-                <ul style="margin-top: -10px;">
-                    <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
-                    <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+                <ul>
+                    <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
+                    <li class="grey-text"><i class="material-icons" >copyright</i> <span class="right">2017 Deegeelab</span></li>
                 </ul>
             </div>
             <div class="right">
-                <ul style="margin-top: -10px;">
-                    <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
-                    <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
+                <ul>
+                    <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
+                    <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
                     <li style="top: 5px;position:  relative;">
-                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
-                        <a href="https://twitter.com/DeegeelabAU"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
-                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/twitterlogo.png"></a>
+                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                        <a href="https://twitter.com/DeegeelabAU"><img width="30px" src="assets/images/icons/iglogo.png"></a>
+                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                     </li>
                 </ul>
             </div>
