--- a/social.html
+++ b/social.html
@@ -19,28 +19,28 @@
         <div class="container row white" style="width: 100% !important; max-width: 100%; overflow: hidden; margin: 0px;">
             <div class="section" style="padding: 0 !important;">
                 <div class="white" id='display_desktop'>
+                    <div class="col s12 service-menu">
+                        <div class="left">
+                            <ul>
+                                <li>
+                                    <a href="index.html" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="right">
+                            <ul>
+                                <li>
+                                    <a href="frontend.html" class="menu btn-flat btn-floating"><i class="material-icons">arrow_back</i> </a>
+                                    <a href="marketing.html" class="menu btn-flat btn-floating"><i class="material-icons">arrow_forward</i> </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="col s12 m6 l6" id='social'>
-                        <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu"><i class="material-icons">menu</i></a>
+                        <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu menu-left"><i class="material-icons">menu</i></a>
                         <div class='service-banner'></div>
                     </div>
                     <div class="col s12 m6 l6 services-content">
-                        <div class="col s12">
-                            <div class="left">
-                                <ul>
-                                    <li>
-                                        <a href="index.html"><i class="material-icons" style="line-height: unset;">home</i> </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="right">
-                                <ul>
-                                    <li>
-                                        <a href="frontend.html"><i class="material-icons" style="line-height: unset;">arrow_back</i> </a>
-                                        <a href="marketing.html"><i class="material-icons" style="line-height: unset;">arrow_forward</i> </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Social Media Management</h4>
@@ -93,8 +93,8 @@
                     <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
                     <li style="top: 5px;position:  relative;">
                         <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
-                        <a href="https://twitter.com/DeegeelabAU"><img width="30px" src="assets/images/icons/iglogo.png"></a>
-                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
+                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/iglogo.png"></a>
+                        <a href="https://twitter.com/DeegeelabAU"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                     </li>
                 </ul>
             </div>
@@ -129,8 +129,8 @@
                         <ul>
                             <li>
                                 <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
-                                <a href="https://twitter.com/DeegeelabAU"><img width="35px" src="assets/images/icons/iglogo.png"></a>
-                                <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
+                                <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/iglogo.png"></a>
+                                <a href="https://twitter.com/DeegeelabAU"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                             </li>
                         </ul>
                     </div>
@@ -144,6 +144,6 @@
     <script src="assets/js/materialize.min.js"></script> 
     <script src="assets/js/scrolloverflow.min.js"></script> 
     <script >
-        $(".menu").sideNav();
+        $(".menu-left").sideNav();
     </script>
 </html>
