--- a/marketing.html
+++ b/marketing.html
@@ -19,28 +19,28 @@
         <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
             <div class="section" style="padding: 0 !important;">
                 <div class="white">
+                    <div class="col s12 service-menu">
+                        <div class="left">
+                            <ul>
+                                <li>
+                                    <a href="index.html" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="right">
+                            <ul>
+                                <li style="top: 5px;position:  relative;">
+                                    <a href="social.html" class="menu btn-flat btn-floating"><i class="material-icons">arrow_back</i> </a>
+                                    <a href="lead.html" class="menu btn-flat btn-floating"><i class="material-icons">arrow_forward</i> </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="col s12 m6 l6" id='marketing'>
-                        <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu"><i class="material-icons">menu</i></a>
+                        <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu menu-left"><i class="material-icons">menu</i></a>
                         <div class='service-banner'></div>
                     </div>
                     <div class="col s12 m6 services-content">
-                        <div class="col s12">
-                            <div class="left">
-                                <ul>
-                                    <li>
-                                        <a href="index.html"><i class="material-icons" style="line-height: unset;">home</i> </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="right">
-                                <ul>
-                                    <li style="top: 5px;position:  relative;">
-                                        <a href="social.html"><i class="material-icons" style="line-height: unset;">arrow_back</i> </a>
-                                        <a href="lead.html"><i class="material-icons" style="line-height: unset;">arrow_forward</i> </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Digital Marketing</h4>
@@ -159,6 +159,6 @@
     <script src="assets/js/materialize.min.js"></script> 
     <script src="assets/js/scrolloverflow.min.js"></script> 
     <script >
-        $(".menu").sideNav();
+        $(".menu-left").sideNav();
     </script>
 </html>
