--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <circle class="fill-white" data-node='2' cx="-185.5" cy="262.5" r="20" data-link='lead.html' data-name='Lead Generation' data-image='img3.png' data-desc='Capture and nurture leads using content, social media marketing, SEO and email marketing. '/>
                             </a>
                             <a class="deegeelab-pulse btn nodes">
-                                <circle class="fill-blue" data-node='3' cx="5.4" cy="289.4" r="26.2" data-link='webdev.html' data-name='Website Development' data-image='img1.png' data-desc='Create a creative, mobile-friendly and fully functional website for your business.'/>
+                                <circle style="" class="fill-blue" data-node='3' cx="5.4" cy="289.4" r="26.2" data-link='webdev.html' data-name='Website Development' data-image='img1.png' data-desc='Create a creative, mobile-friendly and fully functional website for your business.'/>
                             </a>
                             <a class="deegeelab-pulse btn nodes">
                                 <circle class="fill-white" data-node='4' cx="55.1" cy="389.3" r="19" data-link='backend.html' data-name='Customer Support Back-End' data-image='bgpillar.jpg' data-desc='Resolve complaints and manage other types of customer concerns on your behalf.'/>
