--- a/webdev.html
+++ b/webdev.html
@@ -151,6 +151,9 @@
     <script src="assets/js/materialize.min.js"></script> 
     <script src="assets/js/scrolloverflow.min.js"></script> 
     <script >
+        let docWidth = $(document).width(), docHeight = $(document).height();
+        console.log(docHeight);
+        $(".service-banner").attr({"style":`height:${docHeight}px`});
         $(".menu-left").sideNav();
     </script>
 </html>
