--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </svg>
                         <div class='list'></div>
                     </div>
-                    <h4 class="white-text">SuperCharge your Business with <b class='logo-color'>Deegeelab</b></h4>
+                    <h4 class="white-text shadowed">SuperCharge your Business with <b class='logo-color'>Deegeelab</b></h4>
                     <a href="#pillars" data-activates="menu" class="btn-flat btn-floating grey-text darken-4"><i class="material-icons">mouse</i></a>
                 </div>
             </div>  
